--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <div class="icon" id="terminal-icon">
             <img src="terminal-icon.png" alt="Terminal Icon" />
         </div>
+        
+        <!-- Terminal Window -->
         <div class="terminal-window" id="terminal-window">
             <div class="title-bar">
                 <div class="title">Pluffyee Terminal</div>
@@ -25,13 +27,10 @@
                 <span class="input" id="input" contenteditable="true"></span>
             </div>
         </div>
-    </div>
 
-    <div id="imageModal" class="modal" style="display: none;">
-        <span class="close" id="closeModal">&times;</span>
-        <img id="imgPreview" src="#" alt="Preview">
-    </div>
+        <!-- Image Window - Single definition -->
 
+    <!-- Scripts go at the end of body -->
     <script src="script.js"></script>
 </body>
 </html>
